--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: manual-trigger-workflow-with-input
 
 on: # give values as workflow_dispatch so that you can trigger workflow manually
+  push:
+    branches: [master]
   workflow_dispatch:
     inputs: # with this, we can give values at runtime 
       name: # this is the name of the input, "name"
